--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
-<title>Redirecting to https://wa.arckone.app/</title>
-<meta http-equiv="refresh" content="0; URL=https://wa.arckone.app/">
-<link rel="canonical" href="https://wa.arckone.app/">
+
+<html lang="en">
+
+  <head>
+
+    <meta charset="utf-8">
+    <meta http-equiv="refresh" content="0; url=https://wa.arckone.app/">
+
+    <link rel="canonical" href="https://wa.arckone.app/">
+
+    <title>Redirecting to arckone!</title>
+
+  </head>
+  
+</html>
